--- a/index.html
+++ b/index.html
@@ -1,94 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connect-four-game</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <button class="purple-btn" tabindex="2"><h1>MENU</h1></button>
-            <img src="./assets/svg-logo-quatre-rond.svg" alt="quatre-rond-icon">
-            <button class="purple-btn" tabindex="2"><h1>RESTART</h1></button>
-        </nav>
-    </header>
-    <main>
-        <section class="player-score-section">
-        <div class="player-1-score">
-            <img class="player-1-score-img" src="./assets/player-one.svg" alt="player-one-icon">
-            <h1 class="heading-s" tabindex="1">PLAYER 1</h1>
-            <h2 class="heading-l" role="log" aria-live="polite" tabindex="1">12</h2>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Connect-four-game</title>
+		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/normalize.css" />
+		<link rel="stylesheet" href="./css/main.css" />
+	</head>
+	<body>
+		<div class="rules-div" id="hidden">
+			<div class="rules">
+                <button class="rule-close-btn" aria-label="Valider button" tabindex="1">
+                    <img src="./assets/valider-svg-icon.svg" alt="valier-icon">
+                </button>
+                <h1 class="rule-h">RULES</h1>
+                <h3 class="rule-txt" id="purple-txt">OBJECTIVE</h3>
+                <p class="rule-p">Be the first player to connect 4 of the same colored discs in a row (either vertically, horizontally, or diagonally).</p>
+                <h3 class="rule-txt" id="purple-txt">HOW TO PLAY</h3>
+                <ol>
+                    <li><span class="span-li">1</span>Red goes first in the first game.</li>
+                    <li><span class="span-li">2</span>Players must alternate turns, and only one disc can be dropped in each turn. </li>
+                    <li><span class="span-li">3</span>The game ends when there is a 4-in-a-row or a stalemate.</li>
+                    <li><span class="span-li">4</span>The starter of the previous game goes second on the next game.</li>
+                </ol>
+		    </div>
         </div>
-        <div class="grid-img-div">
-            <img class="grid-img" src="./assets/grille-svg.svg" alt="grid-icon">
-        <div class="grid-game">
-            <div class="gri*d-col" aria-label="première colonne" aria-live="polite" role="log" tabindex="0">
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            </div>
-            <div class="grid-col" aria-label="deuxième colonne"  aria-live="polite" role="log" tabindex="0">
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            </div>
-            <div class="grid-col" aria-label="troisème colonne"  aria-live="polite" role="log" tabindex="0">
-            <button class="case" tabindex="-1"></button>                <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            </div>
-            <div class="grid-col" aria-label="quatrième colonne"  aria-live="polite" role="log" tabindex="0">
-            <button class="case" tabindex="-1"></button>                <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            </div>
-            <div class="grid-col" aria-label="cinquième colonne"  aria-live="polite" role="log" tabindex="0">
-            <button class="case" tabindex="-1"></button>                <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            </div>
-            <div class="grid-col" aria-label="sixième colonne"  aria-live="polite" role="log" tabindex="0">
-            <button class="case" tabindex="-1"></button>                <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            </div>
-            <div class="grid-col" aria-label="septième colonne"  aria-live="polite" role="log" tabindex="0">
-            <button class="case" tabindex="-1"></button>                <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
-            <button class="case" tabindex="-1"></button>
+        <div class="menu-pause-div">
+            <div class="menu-pause">
+                <h1 id="white-txt">PAUSE</h1>
+                <button class="menu-pause-btn"><h2>CONTINUE GAME</h2></button>
+                <button class="menu-pause-btn"><h2>RESTART</h2></button>
+                <button class="menu-pause-btn" id="red-btn"><h2>QUIT GAME</h2></button>
             </div>
         </div>
-    </div>
-        <div class="player-2-score">
-            <img class="player-2-score-img" src="./assets/player-two.svg" alt="player-two-icon">
-            <h1 class="heading-s" tabindex="1">PLAYER 2</h1>
-            <h2 class="heading-l" role="log" aria-live="polite" tabindex="1">23</h2>
-        </div> 
-    </section>
-    <div class="timer-player">
-        <!--timer a faire, juste la cémentique ensuite tu change la classe via js pour joueur 1 ou 2 tkt la conf-->
-    </div>
-    </main>
-    <script src="app.js"></script>
-</body>
+		<header>
+			<nav>
+				<button class="purple-btn" tabindex="2"><h4>MENU</h4></button>
+				<img src="./assets/svg-logo-quatre-rond.svg" alt="quatre-rond-icon" />
+				<button class="purple-btn" tabindex="2"><h4>RESTART</h4></button>
+			</nav>
+		</header>
+		<main>
+			<section class="player-score-section">
+				<div class="player-1-score">
+					<img
+						class="player-1-score-img"
+						src="./assets/player-one.svg"
+						alt="player-one-icon"
+					/>
+					<h3 tabindex="1">PLAYER 1</h3>
+					<h1 role="log" aria-live="polite" tabindex="1">
+						12
+					</h1>
+				</div>
+				<div class="grid-img-div">
+					<img class="grid-img" src="./assets/grille-svg.svg" alt="grid-icon" />
+					<div class="grid-game">
+						<div
+							class="grid-col"
+							aria-label="première colonne"
+							aria-live="polite"
+							role="log"
+							tabindex="0"
+						>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+						</div>
+						<div
+							class="grid-col"
+							aria-label="deuxième colonne"
+							aria-live="polite"
+							role="log"
+							tabindex="0"
+						>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+						</div>
+						<div
+							class="grid-col"
+							aria-label="troisème colonne"
+							aria-live="polite"
+							role="log"
+							tabindex="0"
+						>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+						</div>
+						<div
+							class="grid-col"
+							aria-label="quatrième colonne"
+							aria-live="polite"
+							role="log"
+							tabindex="0"
+						>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+						</div>
+						<div
+							class="grid-col"
+							aria-label="cinquième colonne"
+							aria-live="polite"
+							role="log"
+							tabindex="0"
+						>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+						</div>
+						<div
+							class="grid-col"
+							aria-label="sixième colonne"
+							aria-live="polite"
+							role="log"
+							tabindex="0"
+						>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+						</div>
+						<div
+							class="grid-col"
+							aria-label="septième colonne"
+							aria-live="polite"
+							role="log"
+							tabindex="0"
+						>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+							<button class="case" tabindex="-1"></button>
+						</div>
+					</div>
+				</div>
+				<div class="player-2-score">
+					<img
+						class="player-2-score-img"
+						src="./assets/player-two.svg"
+						alt="player-two-icon"
+					/>
+					<h3 tabindex="1">PLAYER 2</h3>
+					<h1 role="log" aria-live="polite" tabindex="1">
+						23
+					</h1>
+				</div>
+			</section>
+			<div class="timer-player">
+				<h4
+					class="player-1-timer-text"
+					aria-label="player timer turn"
+					tabindex="1"
+				>
+					Player 1'S turn
+				</h4>
+				<h4
+					class="player-2-timer-text"
+					aria-label="player timer turn"
+					tabindex="1"
+				>
+					Player 2'S turn
+				</h4>
+				<h1
+					class="heading-l"
+					class="player-timer-time"
+					aria-label="timer time"
+					tabindex="1"
+				>
+					30s
+				</h1>
+			</div>
+			<div class="winner-banner">
+				<h4
+					class="winner-player-1"
+					aria-label="winner player"
+					tabindex="5"
+				>
+					PLAYER 1
+				</h4>
+				<h4
+					class="winner-player-2"
+					aria-label="winner player"
+					tabindex="5"
+				>
+					PLAYER 2
+				</h4>
+				<h1>WINS</h1>
+				<button
+					class="player-winner-btn"
+					aria-label="play again ?"
+					tabindex="4"
+				>
+                <h4>PLAY AGAIN</h4>
+				</button>
+		</main>
+		<script src="app.js"></script>
+	</body>
 </html>
